--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -49,7 +49,29 @@
                 android:resource="@xml/file_paths"></meta-data>
         </provider>
         <meta-data android:name="com.google.firebase.messaging.default_notification_icon" android:resource="@mipmap/ic_launcher" />
+<meta-data
+   android:name="com.facebook.sdk.ApplicationId"
+   android:value="@string/facebook_app_id"/>
 
+<meta-data 
+    android:name="com.facebook.sdk.ClientToken" 
+    android:value="@string/facebook_client_token"/>
+
+<activity
+   android:name="com.facebook.FacebookActivity"
+   android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+   android:label="${displayName}" />
+
+<activity
+   android:name="com.facebook.CustomTabActivity"
+   android:exported="true">
+   <intent-filter>
+      <action android:name="android.intent.action.VIEW" />
+      <category android:name="android.intent.category.DEFAULT" />
+      <category android:name="android.intent.category.BROWSABLE" />
+      <data android:scheme="@string/fb_login_protocol_scheme" />
+   </intent-filter>
+</activity>
     </application>
 
     <!-- Permissions -->
